--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -93,5 +93,6 @@
     <script type="text/javascript" src="~/js/instagram.min.js"></script>
     <script type="text/javascript" src="~/js/customs.js"></script>
     <script type="text/javascript" src="~/js/ajax.js"></script>
+    <script type="text/javascript" src="~/js/admin.js"></script>
 </body>
 </html>
