--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
 
-  @await Component.InvokeAsync("Search", new { model = Model.SearchViewModel })
+  @await Component.InvokeAsync("Search")
 
   @await Component.InvokeAsync("OtherCitiesPlaces", new { model = Model.OtherCitiesPlacesViewModel})
 
