[FIX] Хотфикс правок по вьюхам
Врятли поможет, потому что и админ не грузится. Тим, чекни что ты
получаешь во вьюхе и что ты ловишь в модель вьюхи. Вероятно проблема в
этом

--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 
   @await Component.InvokeAsync("Search")
 
-  @await Component.InvokeAsync("OtherCitiesPlaces", new { model = Model.OtherCitiesPlacesViewModel})
+  @await Component.InvokeAsync("OtherCitiesPlaces")
 
-  @await Component.InvokeAsync("ThisCityPlaces", new { model = Model.ThisCityPlacesViewModel})
+  @await Component.InvokeAsync("ThisCityPlaces")
 
   @await Component.InvokeAsync("Capabilities")
 
