[ADD] Передача конфигурационных данных в Индекс
Передача локализируемых строк в Индекс, подгрузка компонентов из БД.
Раньше мы сами указывали какой компонент подгружать в каком порядке.
Теперь этот порядок хранится в БД. Также есть возможность подгружать
вариации компонентов, например версию "Default" или любую другую

--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -2,17 +2,10 @@
 @model FlexTemplate.ViewModels.HomeIndexViewModel
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
-
-  @await Component.InvokeAsync("Search")
-
-  @await Component.InvokeAsync("OtherCitiesPlaces")
-
-  @await Component.InvokeAsync("ThisCityPlaces")
-
-  @await Component.InvokeAsync("Capabilities")
-
-  @await Component.InvokeAsync("Suggestions")
-
+  @foreach(var container in Model.Containers)
+  {
+    @await Component.InvokeAsync(container.Key, container.Value)
+  }
 </div>
 
 <!-- end Main Wrapper -->
