--- a/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
@@ -7,8 +7,8 @@
       <span class="user-edit-icon"></span>
       <div class="col-md-8">
         <div class="section-title-02">
-          <h3><span>Інші популярні міста</span></h3>
-          <p class="user-edit-text">Mist is highly flexible, and will be able to adjust to any of your customization’s. Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
+          <h3><span tag="TitleLabelCaption">@Model.Strings["TitleLabelCaption"]</span></h3>
+          <p class="user-edit-text" tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
         </div>
       </div>
     </div>
