--- a/src/FlexTemplate/Views/Home/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/Default.cshtml
@@ -4,8 +4,8 @@
 <!-- start hero-header -->
 <div class="c-search hero alt-height" style="background-image:url('@Model.PhotoPath');">
   <div class="container">
-    <h1>Знайдіть найкращі ресторани за привабливою ціною!</h1>
-    <p>Більш ніж 5000 ресторанів по всій Україні</p>
+    <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
+    <p tag="EndLabelCaption">@Model.Strings["EndLabelCaption"]</p>
     <div class="home-search-form">
       <form>
         <div class="form-group location-form">
@@ -19,7 +19,7 @@
               }
           </select>
         </div>
-        <button class="btn btn-primary btn-form">Знайти</button>
+        <button class="btn btn-primary btn-form" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
       </form>
       <div class="clear"></div>
       <p class="around-you"><a href="#">Або погляньте на інші 128 ресторанів вашого міста</a></p>
