--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="section-title-02">
-                        <h3><span>Ресторани у твоєму місті</span></h3>
-                        <p>Найкращі ресторани міста на будь-який смак</p>
+                        <h3><span tag="TitleLabelCaption">@Model.Strings["TitleLabelCaption"]</span></h3>
+                        <p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
                     </div>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                         }
                     </div>
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary">Більше ресторанів</a>
+                        <a href="#" class="btn btn-primary" tag="MorePlacesButtonCaption">@Model.Strings["MorePlacesButtonCaption"]</a>
                     </div>
                 </div>
             </div>
