--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
@@ -14,7 +14,7 @@
                         <div class="rating-item">
                             <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@Model.Stars" />
                         </div>
-                        <span class="texting">@Model.ReviewsCount</span>
+                        <span class="texting">(@Model.ReviewsCount reviews)</span>
                     </div>
                                   
                     <p class="cuisine">Кухні:
