[ADD] Добавление всех версий компонента Search

--- a/src/FlexTemplate/Views/Home/Components/Search/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/Default.cshtml
@@ -9,7 +9,7 @@
     <div class="home-search-form">
       <form>
         <div class="form-group location-form">
-          <input type="text" class="form-control" placeholder="Where would you like to eat?">
+          <input type="text" class="form-control" placeholder="Де б ви хотіли поїсти?">
         </div>
         <div class="form-group">
           <select class="custom-select" id="cuisine-type">
