--- a/src/FlexTemplate/Views/Home/Components/Search/SearchRightShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/SearchRightShort.cshtml
@@ -21,21 +21,8 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-xss-12 col-xs-6 col-sm-12">
-                        <div class="form-group">
-                            <select class="custom-select" id="no-of-people">
-                                <option value="0">Кількість людей</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                        </div>
-                    </div>
                     <div class="col-xs-12 col-sm-12">
-                        <button class="btn btn-primary btn-block" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
+                        <button class="btn btn-primary btn-block" tag="FindButtonCaption">Знайти</button>
                     </div>
                 </div>
             </form>
