--- a/src/FlexTemplate/Views/Home/Components/Search/SearchLeftShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/SearchLeftShort.cshtml
@@ -3,8 +3,8 @@
 {
 <div class="hero-kb_elastic-inner">
     <div class="container">
-        <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
-        <p tag="EndLabelCaption">@Model.Strings["EndLabelCaption"]</p>
+        <h1 tag="TitleFirstLabelCaption"></h1>
+        <p tag="EndLabelCaption"></p>
         <div class="home-search-form mt-20-xs">
             <form>
                 <div class="form-group location-form">
@@ -14,22 +14,11 @@
                     <select class="custom-select" id="cuisine-type">
                         @for (int i = 0; i < Model.CategoriesNames.Count; i++)
                         {
-                            <option value="@i">@Model.CategoriesNames[i]</option>
+                            <option value="@i"></option>
                         }
                     </select>
                 </div>
-                <div class="form-group">
-                    <select class="custom-select" id="no-of-people">
-                        <option value="0">Кількість людей</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
-                </div>
-                <button class="btn btn-primary btn-form" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
+                <button class="btn btn-primary btn-form" tag="FindButtonCaption">Знайти</button>
             </form>
             <div class="clear"></div>
             <p class="around-you"><a href="#">Або погляньте на інші 128 ресторанів вашого міста</a></p>
