--- a/src/FlexTemplate/Views/Admin/Categories.cshtml
+++ b/src/FlexTemplate/Views/Admin/Categories.cshtml
@@ -6,17 +6,21 @@
   	<div class="categories">
     @foreach (var category in Model.Categories)
     {
-    	<div class="category" id="@category.Id">
+    	<div class="category" dataId="@category.Id">
 				<h3>Категорія <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
 				<button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
 				<div class="aliases">
 				 	@foreach (var alias in category.Aliases)
 				 	{
-				 		<div class="alias" id="@alias.Id">
+				 		<div class="alias" dataId="@alias.Id">
 					    <input class="form-control" type="text" value="@alias.Text">
-					    <select class="custom-select">
-					    	<option>@alias.Language.ShortName</option>
+					    <select class="custom-select languages">
+						    @foreach (var lang in Model.Languages)
+						    {
+						    	<option dataId="@lang.Id">@lang.ShortName</option>
+						    }
 					    </select>
+					 		<button class="btn btn-primary btn-form admin-button-alias-save">Save alias</button>
 					 		<button class="btn btn-primary btn-form admin-button-alias-remove">Remove alias</button>
 				 		</div>
 				 	}
