--- a/src/FlexTemplate/Views/Admin/Categories.cshtml
+++ b/src/FlexTemplate/Views/Admin/Categories.cshtml
@@ -7,28 +7,28 @@
     @foreach (var category in Model.Categories)
     {
     	<div class="category" dataId="@category.Id">
-				<h3>Категорія <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
-				<button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
-				<div class="aliases">
-				 	@foreach (var alias in category.Aliases)
-				 	{
-				 		<div class="alias" dataId="@alias.Id">
-					    <input class="form-control" type="text" value="@alias.Text">
-					    <select class="custom-select languages">
-						    @foreach (var lang in Model.Languages)
-						    {
-						    	<option dataId="@lang.Id">@lang.ShortName</option>
-						    }
-					    </select>
-					 		<button class="btn btn-primary btn-form admin-button-alias-save">Save alias</button>
-					 		<button class="btn btn-primary btn-form admin-button-alias-remove">Remove alias</button>
-				 		</div>
-				 	}
-					<div class="buttons">
-						<button class="btn btn-primary btn-form admin-button-add-alias">Add alias</button>
-	    			<button class="btn btn-primary btn-form admin-button-save">Save</button>
-					</div>
+			<h3>Категорія <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
+			<button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
+			<div class="aliases">
+			 	@foreach (var alias in category.Aliases)
+			 	{
+			 		<div class="alias" dataId="@alias.Id">
+				    <input class="form-control" type="text" value="@alias.Text">
+				    <select class="custom-select languages">
+					    @foreach (var lang in Model.Languages)
+					    {
+					    	<option dataId="@lang.Id">@lang.ShortName</option>
+					    }
+				    </select>
+				 		<button class="btn btn-primary btn-form admin-button-alias-save">Save alias</button>
+				 		<button class="btn btn-primary btn-form admin-button-alias-remove">Remove alias</button>
+			 		</div>
+			 	}
+				<div class="buttons">
+					<button class="btn btn-primary btn-form admin-button-add-alias">Add alias</button>
+    			<button class="btn btn-primary btn-form admin-button-category-save">Save</button>
 				</div>
+			</div>
       </div>
     }
     </div>
