--- a/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero alt-height" style="background-image:url('@Model.PhotoPath');">
+<div class="hero alt-height" style="background-image:url('@Model.Images.First()');">
     <div class="container">
 
         <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
@@ -22,18 +22,6 @@
                         {
                             <option value="@i">@Model.CategoriesNames[i]</option>
                         }
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <select class="custom-select" id="no-of-people">
-                        <option value="0">Number Of People</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
                     </select>
                 </div>
 
