[ADD] Изменены пути к апи
апи для работы с категориями:
GET api/category/get/3 - возвращает json с категорией с id = 3
GET api/category/get - возвращает json со всеми категориями
GET api/category/create - вызывает ViewComponent новой категории
(подробнее см.
http://stackoverflow.com/questions/32618759/viewcomponent-alternative-for-ajax-refresh)
GET api/category/createalias - вызывает ViewComponent нового алиаса
(подробнее см.
http://stackoverflow.com/questions/32618759/viewcomponent-alternative-for-ajax-refresh)
GET api/category/delete/3 - удаляет категорию и её алиасы
POST api/category/update - обновляет категорию и вложеные алиасы из
json'а, создает новые алиасы, если у алиаса нету идентификатора, удаляет
алиасы, неучтенные в json'е

--- a/src/FlexTemplate/Views/Admin/Categories.cshtml
+++ b/src/FlexTemplate/Views/Admin/Categories.cshtml
@@ -1,50 +1,15 @@
-﻿@model FlexTemplate.ViewModels.AdminController.AdminCategoriesViewModel
-
-<div class="c-categories container admin">
-  @if (Model != null)
-  {
-  	<div class="categories">
-    @foreach (var category in Model.Categories)
-    {
-    	<div class="category" dataId="@category.Id">
-				<h3>Категорія <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
-				<button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
-				<div class="aliases">
-				 	@foreach (var alias in category.Aliases)
-				 	{
-				 		<div class="alias" dataId="@alias.Id">
-					    <input class="form-control" type="text" value="@alias.Text">
-					    <select class="custom-select languages">
-						    @foreach (var lang in Model.Languages)
-						    {
-						    	<option dataId="@lang.Id">@lang.ShortName</option>
-						    }
-					    </select>
-					 		<button class="btn btn-primary btn-form admin-button-alias-save">Save alias</button>
-					 		<button class="btn btn-primary btn-form admin-button-alias-remove">Remove alias</button>
-				 		</div>
-				 	}
-					<div class="buttons">
-						<button class="btn btn-primary btn-form admin-button-add-alias">Add alias</button>
-	    			<button class="btn btn-primary btn-form admin-button-category-save">Save</button>
-					</div>
-				</div>
-			</div>
-		}
-		</div>
-		<button class="btn btn-primary btn-form admin-button admin-button-add-category">Add category</button>
-  }
+﻿@model FlexTemplate.ViewModels.AdminController.NewCategoryAliasViewModel
+@if (Model != null && Model.Alias != null)
+{
+<div class="alias" dataId="@Model.Alias.Id">
+    <input class="form-control" type="text" value="@Model.Alias.Text">
+    <select class="custom-select languages">
+        @foreach (var lang in Model.Languages)
+        {
+            <option dataId="@lang.Id">@lang.ShortName</option>
+        }
+    </select>
+    <button class="btn btn-primary btn-form admin-button-alias-save">Save alias</button>
+    <button class="btn btn-primary btn-form admin-button-alias-remove">Remove alias</button>
 </div>
-
-<script>
-	// window.onload = function() {
-	// 	$.ajax(GET_LANGUAGES, {
- //    	success: function() {
- //    		$()
- //    	},
-	//     error: function(error) {
-	//       console.log('error ' + error);
-	//     }
-	// 	});
-	// };
-</script>
+}			 	
