--- a/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlexTemplate.ViewModels.OtherCitiesPlacesViewModel
+﻿@model FlexTemplate.ViewModels.HomeController.OtherCitiesPlacesViewModel
 @if (Model != null)
 {
 <section class="c-other-cities-places">
