--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlexTemplate.ViewModels.ThisCityPlaceViewModel
+﻿@model FlexTemplate.ViewModels.HomeController.ThisCityPlaceViewModel
 @if (Model != null)
 {    
     <div class="GridLex-col-3_sm-4_xs-6_xss-12">
