--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlexTemplate.ViewModels.ThisCityPlacesViewModel
+﻿@model FlexTemplate.ViewModels.HomeController.ThisCityPlacesViewModel
 @if (Model != null)
 {
     <section class="c-this-city-places bg-white">
