--- a/src/FlexTemplate/Views/Home/Index.cshtml
+++ b/src/FlexTemplate/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.ComponentModel
-@model FlexTemplate.ViewModels.HomeIndexViewModel
+@model FlexTemplate.ViewModels.HomeController.HomeIndexViewModel
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
   @foreach(var container in Model.Containers)
