--- a/src/FlexTemplate/Views/Home/Components/OtherCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/OtherCityPlaces/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlexTemplate.ViewModels.OtherCityPlacesViewModel
+﻿@model FlexTemplate.ViewModels.HomeController.OtherCityPlacesViewModel
 <div class="GridLex-col-3_sm-6_xs-6_xss-12">
     <div class="destination-grid-item-02">
         <a href="#">
