--- a/src/FlexTemplate/Views/Home/Components/Search/CenterWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/CenterWide.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model FlexTemplate.ViewModels.SearchViewModel
+﻿﻿@model FlexTemplate.ViewModels.HomeController.SearchViewModel
 @if (Model != null)
 {
 <!-- start hero-header -->
