--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div id="kb" class="carousel kb_elastic kb_wrapper hero-kb_elastic hero-kb_elastic-alt-height" data-ride="carousel" data-interval="4000" data-pause="false">
+<div id="kb" class="carousel kb_elastic kb_wrapper hero-kb_elastic hero-kb_elastic-alt-height" style="margin-top: -25px;" data-ride="carousel" data-interval="4000" data-pause="false">
 
     <div class="carousel-inner" role="listbox">
 
@@ -15,7 +15,7 @@
 
     </div>
 
-    <div class="hero-kb_elastic-inner">
+    <div class="hero-kb_elastic-inner search-margin-top">
 
         <div class="container">
 
