--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShortVideo.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShortVideo.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero-video-bg youtube-bg-wrapper">
+<div class="hero-video-bg youtube-bg-wrapper search-margin-top" style="margin-top:-25px;">
 
     <div class="youtube-overlay"></div>
 
