--- a/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero alt-height" style="background-image:url('@Model.Images.First()');">
+<div class="hero alt-height search-margin-top" style="background-image:url('@Model.Images.First()'); margin-top:-25px;">
     <div class="container">
 
         <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
