--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -1,8 +1,8 @@
 ﻿<!-- start Header -->
 <header id="header">
     <!-- start Navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="header-inner">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-sticky">
+        <div class="header-inner navbar-default navbar-sticky">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand hidden-xs" href="index.html"><img src="images/logo.png" alt="Image" /></a>
