--- a/src/FlexTemplate/Views/Home/Components/Search/CenterShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/CenterShort.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <!-- start hero-header -->
-<div class="hero text-center" style="background-image: url('@Model.Images.First()');">
+<div class="hero text-center search-margin-top" style="background-image: url('@Model.Images.First()'); margin-top:-25px; z-index:1000;">
     <div class="container">
 
         <div class="row">
