--- a/src/FlexTemplate/wwwroot/css/style.css
+++ b/src/FlexTemplate/wwwroot/css/style.css
@@ -803,6 +803,10 @@ ul.navbar-nav {} ul.navbar-nav li {} .navbar-collapse.pull-left .navbar-nav {
     bottom: auto;
     top: 50%;
 }
+
+.search-margin-top{
+    margin-top: -25px;
+}
 @media only screen and (max-width: 1199px) {
     .hero {
         background-size: auto;
