[ADD] pages for admin

--- a/src/FlexTemplate/Views/Admin/Pages.cshtml
+++ b/src/FlexTemplate/Views/Admin/Pages.cshtml
@@ -1,22 +1,39 @@
 ﻿@model FlexTemplate.ViewModels.AdminController.AdminPagesViewModel
 @if(Model != null)
 {
-	<!-- <div class="c-pages container admin">
+	<div class="c-pages container admin">
     @foreach (var page in Model.Pages)
     {
     	<div class="page" dataId="@page.Id">
-				<h3>Назва сторінки <input id="pageName" class="form-control" type="text" value="@page.Name"></h3>
-				<h4>Назва класу до тегу <input id="pageNameClass" class="form-control" type="text" value="@page.bodyClasses"></h4>
-				<h4>Назва сторінки у вікні <input id="pageNameTitle" class="form-control" type="text" value="@page.title"></h4>
+				<h3><span>Назва сторінки</span> <input id="pageName" class="form-control" type="text" value="@page.Name"></h3>
+				<h4><span>Назва класу до тегу</span> <input id="pageNameClass" class="form-control" type="text" value="@page.BodyClasses"></h4>
+				<h4><span>Назва сторінки у вікні</span> <input id="pageNameTitle" class="form-control" type="text" value="@page.Title"></h4>
 				<div class="container-components">
+					<h4>Порядок компонентів</h4>
 					<ul id="draggablePanelList" class="list-unstyled">
-			    @foreach (var component in page.pageContainerTemplates)
+			    @foreach (var component in page.PageContainerTemplates)
 			    {
-						
+						<li class="alert alert-info component" dataId="@component.ContainerTemplateId">@component.Page.Name</li>
 			    }
 					</ul>
 				</div>
+        <button class="btn btn-primary btn-form admin-button-pages-save">Save page</button>
     	</div>
     }
-	</div> -->
+	</div>
 }
+
+<script>
+  window.onload = function() {
+    let panelList = $('#draggablePanelList');
+
+    panelList.sortable({
+      update: function() {
+        $('.alert', panelList).each(function(index, elem) {
+          let $listItem = $(elem);
+					let newIndex = $listItem.index();
+        });
+      }
+    });
+	};
+</script>
