--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
   <div id="ajaxForgotPasswordModal" class="modal fade login-box-wrapper" data-width="500" data-backdrop="static" data-keyboard="false" tabindex="-1" style="display: none;"></div>
     <!-- JS -->
     <script type="text/javascript" src="~/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script type="text/javascript" src="~/js/jquery-migrate-1.4.1.min.js"></script>
     <script type="text/javascript" src="~/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/js/SmoothScroll.min.js"></script>
