--- a/src/FlexTemplate/Views/Admin/Categories.cshtml
+++ b/src/FlexTemplate/Views/Admin/Categories.cshtml
@@ -7,7 +7,7 @@
     @foreach (var category in Model.Categories)
     {
     	<div class="category" dataId="@category.Id">
-				<h3>Категорія <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
+				<h3><span>Категорія</span> <input id="categoryName" class="form-control" type="text" value="@category.Name"></h3>
 				<button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
 				<div class="aliases">
 				 	@foreach (var alias in category.Aliases)
