--- a/src/FlexTemplate/Views/Admin/Components/NewCategory/Default.cshtml
+++ b/src/FlexTemplate/Views/Admin/Components/NewCategory/Default.cshtml
@@ -2,7 +2,7 @@
 @if (Model != null)
 {
 <div class="category" dataId="@Model.Id">
-    <h3>Категорія <input id="categoryName" class="form-control" type="text" value="@Model.Name"></h3>
+    <h3><span>Категорія</span> <input id="categoryName" class="form-control" type="text" value="@Model.Name"></h3>
     <button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove category</button>
     <div class="aliases">
         <div class="buttons">
