--- a/src/FlexTemplate/wwwroot/css/your-style.css
+++ b/src/FlexTemplate/wwwroot/css/your-style.css
@@ -50,11 +50,19 @@ Created:        24/10/2016
   margin-bottom: 80px;
 }
 
-.admin h3 {
+.admin h3,
+.admin h4 {
   display: inline-block;
 }
 
-.admin h3 input {
+.admin h3 span,
+.admin h4 span {
+  width: 250px;
+  display: inline-block;
+}
+
+.admin h3 input,
+.admin h4 input {
   display: inline-block;
   width: 300px;
   color: #3277C0;
@@ -94,4 +102,24 @@ Created:        24/10/2016
   width: 200px;
   display: inline-block;
   vertical-align: middle;
+}
+
+#draggablePanelList {
+  padding-left: 20px;
+  max-width: 780px;
+}
+
+#draggablePanelList li {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  font-weight: 700;
+  cursor: move;
+  transition: background .3s ease-in-out;
+}
+
+#draggablePanelList li.ui-sortable-helper {
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+  color: #8a6d3b;
+  transition: background .3s ease-in-out;
 }
