[ADD] remove and create component for admin/pages

--- a/src/FlexTemplate/wwwroot/css/your-style.css
+++ b/src/FlexTemplate/wwwroot/css/your-style.css
@@ -104,6 +104,10 @@ Created:        24/10/2016
   vertical-align: middle;
 }
 
+.admin-button-remove-component {
+  float: right;
+}
+
 #draggablePanelList {
   padding-left: 20px;
   max-width: 780px;
