--- a/src/FlexTemplate/Views/Admin/Components/NewPageContainer/Default.cshtml
+++ b/src/FlexTemplate/Views/Admin/Components/NewPageContainer/Default.cshtml
@@ -1,5 +1,8 @@
 ﻿@model FlexTemplate.ViewModels.AdminController.NewPageContainerViewModel
 @if (Model != null)
 {
-
+	<li class="alert alert-info component new clearfix" dataId="@Model.ContainerTemplateId">
+		<span>@Model.Page.Name</span>
+		<button class="btn btn-primary btn-form admin-button-remove-component">Remove</button>
+	</li>
 }
