--- a/src/FlexTemplate/Views/Admin/Pages.cshtml
+++ b/src/FlexTemplate/Views/Admin/Pages.cshtml
@@ -10,11 +10,15 @@
 				<h4><span>Назва сторінки у вікні</span> <input id="pageNameTitle" class="form-control" type="text" value="@page.Title"></h4>
 				<div class="container-components">
 					<h4>Порядок компонентів</h4>
-					<ul id="draggablePanelList" class="list-unstyled">
-			    @foreach (var component in page.PageContainerTemplates)
-			    {
-						<li class="alert alert-info component" dataId="@component.ContainerTemplateId">@component.Page.Name</li>
-			    }
+					<ul id="draggablePanelList" class="component-list list-unstyled">
+				    @foreach (var component in page.PageContainerTemplates)
+				    {
+							<li class="alert alert-info component clearfix" dataId="@component.ContainerTemplateId">
+								<span>@component.Page.Name</span>
+        				<button class="btn btn-primary btn-form admin-button-remove-component">Remove</button>
+							</li>
+				    }
+        		<button class="btn btn-primary btn-form admin-button-add-component">Add component</button>
 					</ul>
 				</div>
         <button class="btn btn-primary btn-form admin-button-pages-save">Save page</button>
